main.material-goldfish.css
.container {
    display: flex;
    flex-direction: row;
    padding: 15px;
    margin: 10px;
    /* background: linear-gradient(to top right, #FAFAFA, #D8D8D8); */
    /* background: linear-gradient(to right, #25CCB8, #9966ff); */
    background: linear-gradient(to left, #E0E4CC, #A7DBD8);
    border-radius: 10px;
  }

.leftSide {
    display: flex;
    width: 25%;
    flex-direction: column;
    margin-top: 10px;
    overflow: hidden;
    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
    height: 100%;
}

.topLeft {
    /* background: rgb(240, 240, 240); */
    background: #E8DDCB;
    width: 100%;
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
    align-items: middle;
    justify-content: center;
    border-radius: 10px;
    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
    /* transition: all 0.3s cubic-bezier(.25,.8,.25,1); */
      
}

/* .topLeft:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
} */

.content {
    /* background: #FAFAFA; */
    background: #E8DDCB;
    width: 75%;
    margin-left: 15px;
    margin-top: 10px;
    border-radius: 10px;
    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
}

.leftMenu {
    /* background: #D8D8D8; */
    background: #E8DDCB;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: middle;
    justify-content: center;
    border-radius: 10px;
    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
  }
    
.footer {
    font-family: Roboto;
    font-weight: bold;
    text-align: center;
    font-size: .8em;
    color: #9966ff;
    background: #FAFAFA;
    padding-top: 13px;
    width:  100%;
    margin-top: -10px;
    border-radius: 10px;
}
    
/* topLeft Grid   */
.avatar {
    border-radius: 100%;
    margin-left: auto;
    margin-right: auto;
    display: block;
    margin-top: 10px;
    height: 136px;
}

.name {
    /* ERIK THORELLI: */
    font-family: Roboto;
    font-weight: bold;
    font-size: 3.5em;
    /* color: #4A4A4A; */
    color: #033649;
    text-align: center;
    padding-top: 1%;
    /* padding-bottom: 4%; */
    padding-right: 4%;
    padding-left: 4%;
}

.name a {
    color: #033649;
}

.name p {
    font-size: 0.2em;
    padding: 0%;
}

/* leftMenu Grid */

.innerLeftMenu {
    padding-top: 18%;
    padding-bottom: 18%;
    padding-left: 12%;
    font-family: Roboto;
    font-weight: bold;
    font-size: 4em;
    /* color: #4A4A4A; */
    color: #033649;
    text-transform: uppercase;
}

.innerLeftMenu a {
    color: #033649;
}

/* Should be bold gray and when moused over should light up  */
.navItem {
    padding-bottom: 8%;
    
}

.lastNavItem {
    /* No extra padding a.k.a. hacking it */
    padding-bottom: 0%;
}

.currentNavItem {
    color: #FAFAFA;
    padding-bottom: 8%;
}

.currentLastNavItem {
    color: #FAFAFA;
    padding-bottom: 0%;
}

a {
    text-decoration: none;
    color: rgb(31, 31, 31);
}

a:visited {
    /* color: #4A4A4A; */
    text-decoration: none;
}

a:hover {
    /* color: rgb(114, 116, 206); */
    /* color: #C85FEB; */
    /* color: #B19CD9; */
    
    /* Websafe and bright */
    color: #9966ff;
    
}

a:active {
    color: #FAFAFA;
}


.content-header {
    font-family: Roboto;
    font-size: 2.5em;
    font-weight: bold;
    padding-top: 5%;
    padding-left: 10px;
    text-transform: uppercase;
    color: #033649;
    margin: 10px;
}

.content-content {
    font-family: Roboto;
    font-size: 1.2em;
    font-weight: 300;
    width: 90%;
    color: #031634;
    margin: 10px;
}

p, h2 {
    padding-top: 18px;
    padding-left: 10px;
    padding-right: 10px;
    color: #033649;
}

.content-content  a {
    font-weight: bolder;
    color: #033649;
}

.content-content h2 {
    font-weight: 700;
    /* font-size: 18px; */
}

.content-content a:hover {
    color: #9966ff;    
}


.media-player {
    text-align: center;
}

.media-player img {
    width: 20%;
    min-width: 250px;
    border-radius: 5px;
}

audio {
    width: 35%;
    min-width: 250px;
}

.social-links {
    /* vertical-align: middle; */
    margin-left: 15px;
    display: flex;
    align-items:center;
}

.social-logo {
    width: 104px;
    max-width: 104px;
}
/*
.social-links a {
    vertical-align: top;
} */

.social-links img {
    vertical-align: middle;
}

/* Medium screens */
@media all and (max-width: 1395px) {
    .container {
    /* On medium screens, the left side (avatar box and nav) becomes two columns on same row */
    flex-direction: column;
    }
    .leftSide {
        width: 100%;
        flex-direction: row;
    }

    .topLeft {
        margin-bottom: 0;
        display: flex;
        flex-direction: column;
        align-items: middle;
        justify-content: center;
        margin-right: 10px;
    }

    .avatar-div {
        display: flex;
        align-items: middle;
        justify-content: center;
}

    .content {
        width: 100%;
        margin-left: 0px;
        margin-top: 10px;
        padding: 0;
    }

    .content-content {
        width: 95%;
        text-align: justify;
    }

    .innerLeftMenu {
        padding-top: 0%;
        padding-bottom: 0%;
    }    
}

/* Medium-small screens */
@media all and (max-width: 800px) {
    .container {
        /* On small screens, we are no longer using row direction but column */
        flex-direction: column;
    }
    
    .innerLeftMenu {
        font-size: 2em;
    }    
}


/* Small screens */
@media all and (max-width: 600px) {
    .container {
        /* On small screens, we are no longer using row direction but column */
        flex-direction: column;
    }
    .leftSide {
        width: 100%;
        flex-direction: column;
    }
    
.topLeft {
    margin-bottom: 10px;
}

    .innerLeftMenu {
        font-size: 2em;
        padding-top: .5em;
        padding-bottom: .5em;
    }    
}

